TEST_PROGRAMS/INVALID/stefan_knudsen/commandAsGuard.min
var n : int;
var i : int;
n = 10;
i = 10;
while n = i do
i = i - 1;
done

